[package]
name = "graviton"
version = "0.1.0"
authors = ["sentialx <sentialx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston_window = "0.132.0"
find_folder = "*"
closure = "0.3.0"
piston2d-opengl_graphics = "0.85.1"
regex = "1.10.6"
